# minicd

./: .gitignore  .minicd.example  Cargo.toml  README.md  Taskfile.yaml  minicd.example.toml  minicd.toml
.github/workflows/: releases.yml
contrib/systemd/: minicd.service
docs/schemas/: .minicd.schema.json
scripts/: install.sh
src/: config.rs  definition.rs  main.rs  repos.rs  secrets.rs
src/api/: error.rs  mod.rs  util.rs
src/git/: error.rs  mod.rs
src/mailing/: error.rs  mod.rs
src/runner/: error.rs  mod.rs
