[package]
name = "minicd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
figment = { version = "0.10.10", features = ["yaml", "toml", "env"] }
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
walkdir = "2.3.3"
warp = "0.3.5"
